fixed: Border on stroke in whiteboard is cut off in IE10. IE for some reason doesn't actually set the correct initial border-collapse.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@20325 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_form-fields.scss
+++ b/src/main/resources/scss/_form-fields.scss
@@ -2,7 +2,7 @@
 
 .nt-combobox {
 	.x-form-trigger-wrap {
-		border-collapse: initial;
+		border-collapse: separate;
 		padding: 0 15px 0 0;
 		border-radius: 5px;
 		border: 1px solid #a0a0a0;
